// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scheduling cancelBooking 1`] = `Map {}`;

exports[`Scheduling cancelBooking 2`] = `
[
  1723680000000,
  1723680900000,
  1723681800000,
  1723682700000,
]
`;

exports[`Scheduling confirmBooking 1`] = `
Map {
  1723680000000 => "Dr Jones",
}
`;

exports[`Scheduling confirmBooking 2`] = `
[
  1723680900000,
  1723681800000,
  1723682700000,
]
`;

exports[`Scheduling register client 1`] = `
Scheduling {
  "clients": Map {
    "Mr Harrison" => Client {
      "bookings": Map {},
      "id": "Mr Harrison",
    },
  },
  "providers": Map {},
  "unconfirmedAppointments": Map {},
}
`;

exports[`Scheduling register provider 1`] = `
Scheduling {
  "clients": Map {},
  "providers": Map {
    "Dr Jones" => Provider {
      "appointments": Map {},
      "id": "Dr Jones",
    },
  },
  "unconfirmedAppointments": Map {},
}
`;

exports[`Scheduling registerBooking 1`] = `
{
  "client": "Mr Harrison",
  "provider": "Dr Jones",
  "slot": 1723680000000,
}
`;
